--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "test:e2e": "jest --config ./apps/web_api/test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.4",
+    "@nestjs/apollo": "^12.0.9",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.9",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "graphql": "^16.8.1",
     "joi": "^17.11.0",
     "mongoose": "^7.6.1",
     "reflect-metadata": "^0.1.13",
