--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "apollo-server-core": "^3.12.1",
     "graphql": "^16.8.1",
     "joi": "^17.11.0",
     "mongoose": "^7.6.1",
