--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "apollo-server-core": "^3.12.1",
     "graphql": "^16.8.1",
     "joi": "^17.11.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -80,7 +81,8 @@
     ],
     "moduleNameMapper": {
       "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
-      "^@app/mongo(|/.*)$": "<rootDir>/libs/mongo/src/$1"
+      "^@app/mongo(|/.*)$": "<rootDir>/libs/mongo/src/$1",
+      "^@app/repository(|/.*)$": "<rootDir>/libs/repository/src/$1"
     }
   }
 }
