--- a/package.json
+++ b/package.json
@@ -26,13 +26,19 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.9",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/passport-local": "^1.0.36",
     "apollo-server-core": "^3.12.1",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.8.1",
     "joi": "^17.11.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -40,6 +46,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
