--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/passport-local": "^1.0.36",
     "apollo-server-core": "^3.12.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
     "joi": "^17.11.0",
     "mongodb": "^6.1.0",
